welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to L-1){
               ^